--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
     <!--header-->
 
     <div id="main_banner">
-        <h1><video src="./images/main_video_final.mp4" autoplay muted loop playsinline></video></h1>
+        <h1><video src="./images/final_fianl.mp4" autoplay muted loop playsinline></video></h1>
         <p class="scroll_icon">
             <a href="#best_products"><img src="./images/scroll_icon.png" alt=""></a>
         </p>
