--- a/sub2_page.html
+++ b/sub2_page.html
@@ -21,7 +21,7 @@
 <body>
     <div id="header">
         <h1 class="logo">
-            <a href="./Index.html"><img src="./images/header_logo_icon1.png" alt="ose"></a>
+            <a href="./index.html"><img src="./images/header_logo_icon1.png" alt="ose"></a>
         </h1>
         <ul id="gnb">
             <li>
