--- a/sub2_page.html
+++ b/sub2_page.html
@@ -185,7 +185,7 @@
     <!--마진오토-->
 
     <div class="color_pic_flex">
-        <div>
+        <div class="color_img">
             <img class="imgClass" src="./images/sub2_sec5_kylie.jpg" alt="">
         </div>
 
@@ -204,14 +204,13 @@
             });
         </script>
 
-        <div class="color_pic_flex">
+       
             <ul class="color_group1">
                 <li class="pick_img"><img src="./images/sub2_sec5_pic1.jpg" alt=""></li>
                 <li class="pick_img"><img src="./images/sub2_sec5_pic2.jpg" alt=""></li>
                 <li class="pick_img"><img src="./images/sub2_sec5_pic3.jpg" alt=""></li>
                 <li class="pick_img"><img src="./images/sub2_sec5_pic4.jpg" alt=""></li>
             </ul>
-        </div>
     </div>
     <!--color_pic_flex-->
     <!--pick your color-->
